# emilioMosconi

./: .gitignore  CLAUDE.md  README.md  avvia.sh  pyproject.toml
docs/: HARDWARE.md  MESSA_A_PUNTO.md  PERSONE_E_MODELLI.md  PROGETTO.md
emilio/: README.md  __init__.py  actuators.py  agent.py  cli.py  config.py  requirements.txt  speech.py
emilio/docs/: PROGETTO.md
emilio/moderation/: engine.py
emilio/tests/: test_voice.py
src/emilio/: __init__.py  agent.py  ascolto.py  audio_bip.py  brain.py  cli.py  config.py  occhi.py  persona.py  speech.py
src/emilio/moderation/: __init__.py  engine.py  lexicon.py
tests/: test_censura_audio.py  test_cervello_occhi.py  test_cli_picker.py  test_cloud_brain.py  test_lessico_gruppo.py  test_moderation.py  test_monitor_verboso.py  test_reazione_ascolto.py  test_runtime_switch.py  test_streaming_mlx.py  test_voice.py
tools/: README.md  estrai_lessico.py  persona_bucolica.json  persona_germano.json  persona_machiavelli.json  persona_veterano.json  prova_carattere.py
