# Configurazione del progetto Emilio (PEP 621).
#
# Il NUCLEO di Emilio gira con la sola libreria standard: la lista
# `dependencies` è volutamente vuota. Le parti "reali" (cervello LLM, voce,
# hardware) sono dipendenze OPZIONALI, installabili come extra:
#     pip install -e ".[voice]"        # voce ElevenLabs
#     pip install -e ".[llm,voice,hardware]"
#     pip install -e ".[all,dev]"      # tutto + strumenti di sviluppo

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emilio"
version = "0.1.0"
description = "Emilio: robottino anni '90 con cervello LLM, voce realistica e supervisore anti-turpiloquio"
readme = "README.md"
# Minimo 3.11 (è il Python di sistema di Raspberry Pi OS Bookworm). Target
# consigliato 3.13 (Raspberry Pi OS Trixie). Python 3.9/3.10 NON supportati.
requires-python = ">=3.11"
authors = [{ name = "Riccardo Brunello" }]
keywords = ["robot", "llm", "tts", "elevenlabs", "italian", "moderation", "raspberry-pi"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = []  # il core è solo stdlib — è un pregio del design, va preservato

[project.optional-dependencies]
llm = ["anthropic>=0.40"]            # cervello Claude (cloud)
voice = ["requests>=2.31"]           # voce ElevenLabs (streaming) + LLM locale via HTTP
offline-voice = ["pyttsx3>=2.90"]    # TTS offline (ripiego, voce robotica)
hardware = ["pyserial>=3.5"]         # controllo motori via seriale
dev = ["pytest>=7"]
all = ["anthropic>=0.40", "requests>=2.31", "pyttsx3>=2.90", "pyserial>=3.5"]

[project.scripts]
emilio = "emilio.cli:main"           # comando `emilio` (oltre a `python -m emilio`)

[project.urls]
Repository = "https://github.com/TurboR93/emilioMosconi"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
emilio = ["assets/beeps/*"]
